# stream-sage

./: .gitignore  pyproject.toml
src/: config.py  database.py  logging_conf.py  main.py  security.py
src/clients/the_movie_db/: client.py  models.py
src/models/: movie.py
src/routers/: movies_router.py  user.py
src/services/: movie_service.py
tests/: conftest.py  test_security.py
tests/routers/: test_movies.py  test_user.py
