[tool.poetry]
name = "stream-sage"
version = "0.1.0"
description = ""
authors = ["Árnason, Oddur <oddur.arnason@kpn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
pytest = "^8.3.3"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
rich = "^13.9.2"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
asgi-correlation-id = "^4.3.3"
python-json-logger = "^2.0.7"
requests = "^2.32.3"
python-jose = "^3.3.0"
python-multipart = "^0.0.13"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
